--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -1,42 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+ <head>
+  <meta charset="UTF-8" />
+  <title>Ejercicio 2</title>
+ </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Ejercicio 2</title>
-</head>
-
-<body>
-<div>
-    <div>
-        <h2>
-            Paleta de colores
-        </h2>
-        <div style="display: flex;">
-            <div style="display: flex;flex-direction: column;">
-                <button id="btn-1" style="background-color: #e53e3e; width:100px;height: 100px" type="button">
-                </button>
-                <button id="btn-2" style="background-color: #dd6b20; width:100px;height: 100px" type="button">
-                </button>
-                <button id="btn-3" style="background-color: #faf089; width:100px;height: 100px" type="button">
-                </button>
-                <button id="btn-4" style="background-color: #48bb78; width:100px;height: 100px" type="button">
-                </button>
-                <button id="btn-5" style="background-color: #81e6d9; width:100px;height: 100px" type="button">
-                </button>
-                <button id="btn-6" style="background-color: #d53f8c; width:100px;height: 100px" type="button">
-                </button>
-            </div>
-            <div style="width: 500px;height: 600px">
-                <div id="caja" style="border:1px solid black;width: 100%;height: 100%">
-                </div>
-            </div>
-        </div>
+ <body>
+  <div>
+   <div>
+    <h2>
+     Paleta de colores
+    </h2>
+    <div style="display: flex;">
+     <div style="display: flex; flex-direction: column;">
+      <button
+       onclick="cambio(this)"
+       id="btn1"
+       style="background-color: #e53e3e; width: 100px; height: 100px;"
+       type="button"
+      ></button>
+      <button
+       id="btn2"
+       onclick="cambio(this)"
+       style="background-color: #dd6b20; width: 100px; height: 100px;"
+       type="button"
+      ></button>
+      <button
+       id="btn3"
+       onclick="cambio(this)"
+       style="background-color: #faf089; width: 100px; height: 100px;"
+       type="button"
+      ></button>
+      <button
+       id="btn4"
+       onclick="cambio(this)"
+       style="background-color: #48bb78; width: 100px; height: 100px;"
+       type="button"
+      ></button>
+      <button
+       id="btn5"
+       onclick="cambio(this)"
+       style="background-color: #81e6d9; width: 100px; height: 100px;"
+       type="button"
+      ></button>
+      <button
+       id="btn6"
+       onclick="cambio(this)"
+       style="background-color: #d53f8c; width: 100px; height: 100px;"
+       type="button"
+      ></button>
+     </div>
+     <div style="width: 500px; height: 600px;">
+      <div
+       id="caja"
+       style="border: 1px solid black; width: 100%; height: 100%;"
+      ></div>
+     </div>
     </div>
-</div>
-    <script>
-    // Escríbe aquí tu código
-    </script>
-</body>
-
+   </div>
+  </div>
+  <script>
+   let cambio = (btn) => {
+    let caja = document.getElementById("caja");
+    caja.style.backgroundColor = btn.style.backgroundColor;
+   };
+  </script>
+ </body>
 </html>
