--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -1,42 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+ <head>
+  <meta charset="UTF-8" />
+  <title>Ejercicio 3</title>
+ </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Ejercicio 3</title>
-</head>
-
-<body>
+ <body>
+  <div>
+   <div>
+    <h2>Resultado: <span class="resultado"></span></h2>
     <div>
-        <div>
-            <h2>
-                Resultado: <span class="resultado"></span>
-            </h2>
-            <div>
-                <div>
-                    <div>
-                        <label for="">Valor 1</label>
-                        <input id="valor1" type="text">
-                    </div>
-                    <div>
-                        <label for="">Valor 2</label>
-                        <input id="valor2" type="text">
-                    </div>
-                    <div style="display: flex">
-                        <button id="btn-sumar" type="button">
-                            Sumar
-                        </button>
-                        <button id="btn-restar" type="button">
-                            Restar
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
+     <div>
+      <div>
+       <label for="">Valor 1</label>
+       <input id="valor1" type="text" />
+      </div>
+      <div>
+       <label for="">Valor 2</label>
+       <input id="valor2" type="text" />
+      </div>
+      <div style="display: flex;">
+       <button id="btn-sumar" type="button">
+        Sumar
+       </button>
+       <button id="btn-restar" type="button">
+        Restar
+       </button>
+      </div>
+     </div>
     </div>
-    <script>
-    // Escríbe aquí tu código
-    </script>
-</body>
+   </div>
+  </div>
+  <script>
+   let btnSuma = document.getElementById("btn-sumar");
+   let btnResta = document.getElementById("btn-restar");
 
+   btnSuma.addEventListener("click", function () {
+    let res =
+     parseInt(document.getElementById("valor1").value) +
+     parseInt(document.getElementById("valor2").value);
+    let resultado = document.querySelector(".resultado");
+    resultado.innerHTML = res;
+   });
+
+   btnResta.addEventListener("click", function () {
+    let res =
+     parseInt(document.getElementById("valor1").value) -
+     parseInt(document.getElementById("valor2").value);
+    console.log(res);
+    if (res >= 0) {
+     let msg = document.querySelector(".resultado");
+     msg.innerHTML = `${res}`;
+    } else {
+     let msg = document.querySelector(".resultado");
+     msg.innerHTML = "0";
+    }
+   });
+  </script>
+ </body>
 </html>
